Création article via fetch

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -9,16 +9,25 @@
 </head>
 
 <body>
-    <h1>Orinoco</h1>
-    <div id="cart">0</div>
-    <main id="parent">
+    <header>
+        <h1>Orinoco</h1>
+        <div id="cart">0</div>
+    </header>
+    <section id="parent">
+        <article class="produit">
 
-    </main>
+        </article>
 
+    </section>
+
+
+
+
+
+    <footer>
+
+    </footer>
     <script src="testapi.js"></script>
-
-
-    <div id="demo"></div>
 </body>
 
 </html>
