Creation du nombre de produit dans le panier

--- a/front_end/article.html
+++ b/front_end/article.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Orinoco</h1>
+        <a href="index.html">Home</a>
         <div class="cart">0</div>
     </header>
 
