--- a/front_end/index.html
+++ b/front_end/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Orinoco</h1>
-        <div id="cart">0</div>
+        <div class="cart">0</div>
     </header>
 
     <section class="parent">
@@ -39,6 +39,7 @@
     </footer>
     <script src="ajax.js"></script>
     <script src="index.js"></script>
+
 
 </body>
 
