Début de la création du panier

--- a/front_end/article.html
+++ b/front_end/article.html
@@ -12,7 +12,10 @@
     <header>
         <h1>Orinoco</h1>
         <a href="index.html">Home</a>
-        <div class="cart">0</div>
+        <a href="panier.html">
+            <h2>Panier</h2>
+            <div class="cart">0</div>
+        </a>
     </header>
 
     <section id="parent">
