--- a/front_end/index.html
+++ b/front_end/index.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <h1>Orinoco</h1>
-        <div class="cart">0</div>
+        <a href="panier.html">
+            <h2>Panier</h2>
+            <div class="cart">0</div>
+        </a>
     </header>
 
     <section class="parent">
