récupération produit local storage et création des produit dans le panier

--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -23,12 +23,15 @@
             <h2>Votre panier</h2>
             <p>Prix</p>
         </div>
-        <template class="template">
-            <article>
-                <img src="" alt="">
 
-            </article>
-        </template>
+        <article class="produit">
+
+
+        </article>
+        <div class="total">
+            <h2>Total</h2>
+            <p class="prixTotal"></p>
+        </div>
     </section>
 
 
