création du formulaire de commande

--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -34,6 +34,33 @@
         </div>
     </section>
 
+    <section class="formulaire">
+        <h2>
+            Remplire le formulaire pour valider la commande
+        </h2>
+
+        <form id="commande">
+            <p>
+                <label for="nom">Nom</label><br>
+                <input type="text" name="nom" id="nom" required/>
+                <br />
+                <label for="prenom">Prénom</label><br>
+                <input type="text" name="prenom" id="prenom" required/>
+                <br>
+                <label for="email">Email</label><br>
+                <input type="email" name="email" id="email" required/>
+                <br>
+                <label for="address">Adresse</label><br>
+                <input type="text" name="adresse" id="adresse" required/>
+                <br>
+                <label for="ville">Ville</label><br>
+                <input type="text" name="ville" id="ville" required/>
+                <br>
+                <input type="submit" value="Envoyer">
+            </p>
+        </form>
+
+    </section>
 
     <footer>
         <h2>Orinoco</h2>
