requet post réussi formulaire teminer vérification à mettre en place

--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -36,7 +36,7 @@
 
     <section class="formulaire">
         <h2>
-            Remplire le formulaire pour valider la commande
+            Remplir le formulaire pour valider la commande
         </h2>
 
         <form id="commande">
