--- a/front_end/confirmation.html
+++ b/front_end/confirmation.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    <h1 class="titre">Votre commande à était traiter avec succés</h1>
-
+    <script src='confirmation.js'></script>
 </body>
 
 </html>
