formulaire de confirmation terminer

--- a/front_end/article.html
+++ b/front_end/article.html
@@ -39,6 +39,10 @@
       </template>
     </section>
 
+    <footer>
+        <h2>Orinoco</h2>
+    </footer>
+
 
     <script src="ajax.js"></script>
     <script src="article.js"></script>
