--- a/front_end/confirmation.html
+++ b/front_end/confirmation.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="confirmation.css">
     <title>Confirmation</title>
 </head>
 
 <body>
+    <header>
+        <h1>Orinoco</h1>
+        <a href="index.html">Home</a>
+        <a href="panier.html">
+            <h2>Panier</h2>
+            <div class="cart">0</div>
+        </a>
+    </header>
+    <div id="body"></div>
+    <footer>
+        <h2>Orinoco</h2>
+    </footer>
     <script src='confirmation.js'></script>
+
 </body>
 
 </html>
