Test regex email réussi

--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -48,7 +48,7 @@
                 <input type="text" name="prenom" id="prenom" required/>
                 <br>
                 <label for="email">Email</label><br>
-                <input type="email" name="email" id="email" required/>
+                <input type="text" name="email" id="email" />
                 <br>
                 <label for="address">Adresse</label><br>
                 <input type="text" name="adresse" id="adresse" required/>
