mise en place des texts d'erreur

--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -47,6 +47,7 @@
                 <label for="prenom">Prénom</label><br>
                 <input type="text" name="prenom" id="prenom" required/>
                 <br>
+                <p class="email"></p>
                 <label for="email">Email</label><br>
                 <input type="text" name="email" id="email" />
                 <br>
