--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -71,6 +71,7 @@
         <h2>Orinoco</h2>
     </footer>
     <script src="panier.js"></script>
+    <script src="ajax.js"></script>
 </body>
 
 </html>
