Nettoyage du code et optimisation de celui-ci

--- a/front_end/article.html
+++ b/front_end/article.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="article.css">
+    <link rel="stylesheet" href="font_awe/css/all.css">
     <title>Document</title>
 </head>
 
@@ -12,9 +13,9 @@
     <header>
         <h1>Orinoco</h1>
         <a href="index.html">Home</a>
-        <a href="panier.html">
-            <h2>Panier</h2>
-            <div class="cart">0</div>
+        <a class="panier" href="panier.html">
+            <h2>Panier :</h2>
+            <div class="cart"></div>
         </a>
     </header>
 
