--- a/front_end/confirmation.html
+++ b/front_end/confirmation.html
@@ -17,7 +17,9 @@
             <div class="cart">0</div>
         </a>
     </header>
-    <div id="body"></div>
+
+    <section id="body"></section>
+
     <footer>
         <h2>Orinoco</h2>
     </footer>
