--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -13,8 +13,8 @@
     <header>
         <h1>Orinoco</h1>
         <a href="index.html">Home</a>
-        <a href="panier.html">
-            <h2>Panier</h2>
+        <a class="panier" href="panier.html">
+            <h2>Panier :</h2>
             <div class="cart">0</div>
         </a>
     </header>
