--- a/front_end/index.html
+++ b/front_end/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font_awe/css/all.css">
     <title>Orinoco</title>
 </head>
 
 <body>
     <header>
         <h1>Orinoco</h1>
-        <a href="panier.html">
-            <h2>Panier</h2>
-            <div class="cart">0</div>
+        <a class="panier" href="panier.html">
+            <h2>Panier :</h2>
+            <div class="cart"></div>
         </a>
     </header>
 
