--- a/front_end/article.html
+++ b/front_end/article.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="article.css">
     <link rel="stylesheet" href="font_awe/css/all.css">
+    <link rel="stylesheet" href="sass/main.css">
     <title>Document</title>
 </head>
 
@@ -40,7 +41,7 @@
       </template>
     </section>
 
-    <footer>
+    <footer class="footer">
         <h2>Orinoco</h2>
     </footer>
 
