--- a/front_end/index.html
+++ b/front_end/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font_awe/css/all.css">
+    <link rel="stylesheet" href="sass/main.css">
     <title>Orinoco</title>
 </head>
 
@@ -35,7 +36,7 @@
 
 
 
-    <footer>
+    <footer class="footer">
         <h2>Orinoco</h2>
     </footer>
     <script src="ajax.js"></script>
