--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="panier.css">
     <link rel="stylesheet" href="font_awe/css/all.css">
+    <link rel="stylesheet" href="sass/main.css">
     <title>Panier</title>
 </head>
 
@@ -67,7 +68,7 @@
 
     </section>
 
-    <footer>
+    <footer class="footer">
         <h2>Orinoco</h2>
     </footer>
     <script src="panier.js"></script>
