Correction de fautes d’orthographe et améélioration visuel du site

--- a/front_end/confirmation.html
+++ b/front_end/confirmation.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="confirmation.css">
+    <link rel="stylesheet" href="sass/main.css">
     <title>Confirmation</title>
 </head>
 
@@ -12,15 +13,15 @@
     <header>
         <h1>Orinoco</h1>
         <a href="index.html">Home</a>
-        <a href="panier.html">
-            <h2>Panier</h2>
+        <a class="panier" href="panier.html">
+            <h2>Panier :</h2>
             <div class="cart">0</div>
         </a>
     </header>
 
     <section id="body"></section>
 
-    <footer>
+    <footer class="footer">
         <h2>Orinoco</h2>
     </footer>
     <script src='confirmation.js'></script>
