correction style ajout footer sass et header plus ajout effet sur carte et bouton add to cart

--- a/front_end/confirmation.html
+++ b/front_end/confirmation.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="confirmation.css">
+    <link rel="stylesheet" href="font_awe/css/all.css">
     <link rel="stylesheet" href="sass/main.css">
     <title>Confirmation</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Orinoco</h1>
-        <a href="index.html">Home</a>
+        <a href="index.html" class="home"><i class="fas fa-home fa-2x"></i></a>
         <a class="panier" href="panier.html">
             <h2>Panier :</h2>
             <div class="cart">0</div>
