--- a/front_end/index.html
+++ b/front_end/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Orinoco</h1>
         <a class="panier" href="panier.html">
             <h2>Panier :</h2>
