--- a/front_end/panier.html
+++ b/front_end/panier.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Orinoco</h1>
-        <a href="index.html">Home</a>
+        <a href="index.html" class="home"><i class="fas fa-home fa-2x"></i></a>
         <a class="panier" href="panier.html">
             <h2>Panier :</h2>
             <div class="cart">0</div>
