Restructurassions du dossier front-end

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="font_awe/css/all.css">
-    <link rel="stylesheet" href="sass/main.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/font_awe/css/all.css">
+    <link rel="stylesheet" href="style/sass/main.css">
     <title>Orinoco</title>
 </head>
 
 <body>
     <header class="header">
         <h1>Orinoco</h1>
-        <a class="panier" href="panier.html">
+        <a class="panier" href="page/panier.html">
             <h2>Panier :</h2>
             <div class="cart"></div>
         </a>
@@ -39,8 +39,8 @@
     <footer class="footer">
         <h2>Orinoco</h2>
     </footer>
-    <script src="ajax.js"></script>
-    <script src="index.js"></script>
+    <script src="scripts/ajax.js"></script>
+    <script src="scripts/index.js"></script>
 
 
 </body>
